# krisha

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  docker-compose.yml  project_structure  script.py  script_analyze_public_text.py
notification_service/: .dockerignore  Dockerfile  README.md  pyproject.toml
notification_service/src/: bot.py  env.py  main.py
postgres/: init.sql
scraper_service/: .env.example  Dockerfile  alembic.ini  docker-entrypoint.sh  pyproject.toml
scraper_service/src/: __init__.py  api.py  database.py  env.py  main.py  models.py  notifications.py  proxy_manager.py  scraper.py
scraper_service/src/migrations/: env.py
scraper_service/src/migrations/versions/: 2025_03_06_0021-d3badc7774c7_initial.py  2025_03_07_1424-bd98cd0f5d2d_expand_user_id.py  2025_03_09_2009-0d785eab7401_add_telegram_scrapping_models.py  2025_03_11_0920-4017c7036b46_add_apartment_type_for_user_seen_.py  2025_03_12_2224-94c53915b06a_add_city_for_telegram_apartments.py  2025_03_13_0054-64f5d0dd45c0_add_new_table_for_telegram_seen.py  2025_03_13_0113-f0828dfe4426_add_number_max_price.py  2025_03_13_2345-c3acd84aab4a_set_non_unique_apartment_url.py  2025_04_03_0009-319b6a9ab07b_add_community_tables.py  2025_06_25_2304-83a24bbb640e_expand_user_id_for_support_new_telegram_.py  initial_migration.py
scraper_service/src/telegram/: analyzer.py  telegram_scraper.py  verification_service.py
scraper_service/src/utils/: city_mapping.py  photo_manager.py
telegram_bot/: Dockerfile  pyproject.toml
telegram_bot/src/: __init__.py  bot.py  buttons.py  env.py  filters.py  main.py  message_manager.py  notifications.py
telegram_bot/src/utils/: city_mapping.py  city_types.py  gender_types.py  photo_manager.py  rental_types.py
utils/: find_tg_myself_script.py  script_analyze_public_text.py
