[tool.poetry]
name = "rent-service-scraper"
version = "0.1.0"
description = "Scraper service for rent monitoring"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
beautifulsoup4 = "^4.12.0"
requests = "^2.31.0"
schedule = "^1.2.0"
fastapi = "^0.104.0"
uvicorn = "^0.24.0"
sqlalchemy = "^2.0.23"
python-dotenv = "^1.0.0"
psycopg2-binary = "^2.9.9"
redis = "^5.0.1"
aioredis = "^2.0.1"
alembic = "^1.13.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 