[tool.poetry]
name = "rent-service-bot"
version = "0.1.0"
description = "Telegram bot for rent monitoring"
authors = ["Your Name <your.email@example.com>"]
packages = [
    { include = "src" }
]
package-mode = false

[tool.poetry.dependencies]
python = "^3.9"
aiogram = "^3.2.0"
requests = "^2.31.0"
python-dotenv = "^1.0.0"
redis = "^5.0.1"
aioredis = "^2.0.1"

[tool.poetry.group.dev.dependencies]
pytest = "^7.4.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api" 